output alignment fix

--- a/src/components/output/output.css
+++ b/src/components/output/output.css
@@ -29,3 +29,12 @@ ul {
 p{
     padding-left: 3%;
 }
+@media screen and (max-width: 1000px) {
+    .output-container{
+        width: 100vw;
+        margin: auto;
+    }
+    p{
+        margin-left: 25px !important;
+    }
+}
